--- a/package.json
+++ b/package.json
@@ -6,25 +6,32 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-react": "^31.0.1",
     "apexcharts": "^3.45.1",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "smartapi-javascript": "^1.0.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "browser": {
+    "fs": false
   },
   "browserslist": {
     "production": [
