--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "market_and_mf",
   "version": "1.0.0",
-  "homepage": "https://sudir319.github.io/market_and_mf",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
