--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
     "smartapi-javascript": "^1.0.20",
+    "technicalindicators": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
